--- a/mastra_project/package.json
+++ b/mastra_project/package.json
@@ -6,9 +6,9 @@
     "start": "tsx src/mastra/index.ts"
   },
   "dependencies": {
-    "@mastra/core": "^0.1.25",
-    "@mastra/memory": "^0.1.25",
-    "@mastra/engine": "^0.1.25",
+    "@mastra/core": "latest",
+    "@mastra/memory": "latest",
+    "@mastra/engine": "latest",
     "ai": "^4.1.17",
     "zod": "^3.23.8",
     "dotenv": "^16.4.5"
