--- a/mastra_project/package.json
+++ b/mastra_project/package.json
@@ -6,12 +6,13 @@
     "start": "tsx src/mastra/index.ts"
   },
   "dependencies": {
-    "@mastra/core": "latest",
-    "@mastra/memory": "latest",
-    "@mastra/engine": "latest",
+    "@mastra/core": "0.24.5",
     "ai": "^4.1.17",
     "zod": "^3.23.8",
     "dotenv": "^16.4.5"
+  },
+  "overrides": {
+    "ai": "^4.1.17"
   },
   "devDependencies": {
     "tsx": "^4.7.1",
