--- a/mastra_project/package.json
+++ b/mastra_project/package.json
@@ -7,12 +7,10 @@
   },
   "dependencies": {
     "@mastra/core": "0.24.5",
-    "ai": "^4.1.17",
-    "zod": "^3.23.8",
-    "dotenv": "^16.4.5"
+    "zod": "^3.23.8"
   },
   "overrides": {
-    "ai": "^4.1.17"
+    "ai": "4.3.19"
   },
   "devDependencies": {
     "tsx": "^4.7.1",
